# pick_and_place_ICP

icp_bring_up/: CMakeLists.txt  package.xml
icp_bring_up/config/: my_rivz_config.rviz
icp_bring_up/launch/: icp_bring_up.launch
msg_and_srv/: CMakeLists.txt  package.xml
msg_and_srv/msg/: PointCloud2Set.msg  PointCloudArr.msg  PointCloudArrSet.msg
pick_n_place/: CMakeLists.txt  package.xml
pick_n_place/scripts/: pick_n_place.py
pointcloud_converter/: CMakeLists.txt  package.xml
pointcloud_converter/scripts/: change_pointcloud_format.py  get_field_data.py  plane_pc_histogram.py  ransac_filter.py  transform_flower.py  viz_pc.py
pointcloud_converter/src/: lower_pub_rate.cpp  pre_pointcloud.cpp  segment_pointcloud.cpp  testEC.cpp
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/scripts/: camera_tf_broadcast.py  convert_point2BaseLink.py  helper_function.py  helper_function_modified.py  object_pose2Camera.py  test.py
